# engine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  package.json  pnpm-lock.yaml  vcpkg.json
.changeset/: README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  enforce-dev-to-main.yml
.husky/: commit-msg  pre-commit  pre-push
.kiro/steering/: INDEX.md  README.md
.kiro/steering/api/: 13-api-architecture.md  array-assertions.mdc  clean-code.mdc  code-comments.mdc  dependency-injection.mdc  handler-pattern.mdc  hexagonal-architecture.mdc  prettier-formatting.mdc  sst-tagging.mdc  test-desiderata.mdc  test-execution.mdc  testing.mdc
.kiro/steering/mobile/: 00-core-principles.md  01-structure-naming.md  02-composition-patterns.md  03-styling.md  04-typescript.md  05-common-components.md  06-internationalization.md  07-skeleton-loading.md  08-imports-exports.md  09-anti-patterns.md  10-npm-scripts.md  11-performance-optimization.md  12-security-secrets.md  13-api-integration.md  99-quick-reference.md
.setup/: onboard.sh
